--- a/public/.htaccess
+++ b/public/.htaccess
@@ -1,10 +1,12 @@
 <IfModule mod_rewrite.c>
     <IfModule mod_negotiation.c>
         Options -MultiViews -Indexes
+        Options -Indexes
     </IfModule>
 
     RewriteEngine On
 
+   
     # Handle Authorization Header
     RewriteCond %{HTTP:Authorization} .
     RewriteRule .* - [E=HTTP_AUTHORIZATION:%{HTTP:Authorization}]
@@ -18,4 +20,10 @@
     RewriteCond %{REQUEST_FILENAME} !-d
     RewriteCond %{REQUEST_FILENAME} !-f
     RewriteRule ^ index.php [L]
+    
+    # Hide a specific file
+    <Files .env>
+    Order allow,deny
+    Deny from all
+    </Files>
 </IfModule>
