--- a/composer.json
+++ b/composer.json
@@ -9,6 +9,7 @@
         "laravel/framework": "^11.9",
         "laravel/sanctum": "^4.0",
         "laravel/tinker": "^2.9",
+        "league/flysystem-aws-s3-v3": "3.0",
         "php-open-source-saver/jwt-auth": "^2.3",
         "spomky-labs/otphp": "^11.2",
         "tymon/jwt-auth": "^2.1"
